Запустить сайт и устранить ошибки